--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:wght@100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+.inter-font {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:400;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0;
+}
+
+.dancing-font {
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight:400 ;
+  font-style: normal;
+  font-size: 2rem;
+}
 *{
     margin: 0;
     padding: 0;
 }
 
 .btn {
-    background-color: #eb391a;
+    background-color: rgb(230, 83, 60);
     color: white;
     border-radius: 2rem;
     border: none;
@@ -21,7 +41,9 @@
     color: white;
     font-size: 1.2rem;
 }
-
+.spn{
+    font-style:miama ;
+}
 table{
     text-align: left;
     border: 1px solid #9e9e9e8f;
@@ -51,14 +73,14 @@ body{
 }
 .head h1{
     font-size: 3rem;
-    color: #e23900;
+    color: rgb(230, 83, 60);
 }
 nav{
     
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 8vw;
+    margin-right: 6rem;
 }
 nav ul {
     display: flex;
@@ -66,27 +88,27 @@ nav ul {
     text-align: center;
     align-items: center;
     gap: 3.3vw;
-    padding:0px 5px 0px 0px;
+    padding: 0px 1rem 0px 0px;
     border: 1px solid #808080a6;
     border-radius: 3vw;
 }
 nav ul li {
     color: #9E9E9E;
     list-style: none;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
 }
 nav ul li:first-child{
     color: white;
     border-radius: 2vw;
     padding: 0.8vh 1.2vw;
-    background-color: #e23900;
+    background-color: rgb(230, 83, 60);
 }
 .hero{
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 80vw;
     margin: 0 auto;
-    
+    align-items: center;
 }
 .hero-1st{
     color: white;
@@ -94,6 +116,9 @@ nav ul li:first-child{
 }
 .hero-1st h1{
     font-size: 5rem;
+}
+.hero-1st p{
+    margin: 2rem 0rem;
 }
 .hero-2nd{
     color: white;
@@ -135,7 +160,7 @@ nav ul li:first-child{
     width: 2rem;
     border-radius: 2rem;
     height: 2rem;
-    background-color: #e23900;
+    background-color:rgb(230, 83, 60) ;
     border: none;
 }
 .sec-2{
