--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@
     "slnt" 0;
 }
 .dancing-font {
-    font-family: "Dancing Script", cursive;
+    font-family: miama;
     font-optical-sizing: auto;
-    font-weight:400 ;
+    font-weight: 400;
     font-style: italic;
-    font-size: 6rem;
+    font-size: 11rem;
+    line-height: 1rem;
   }
 *{
     margin: 0;
@@ -195,7 +196,7 @@ nav ul li:first-child{
     margin: 3rem 0rem;
 }
 .sec2-title h1{
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 900;
 }
 .sec2-title p{
@@ -504,12 +505,12 @@ footer ul li {
 
 @media screen and (max-width: 720px) {
     .btn{
-        width: 32vw;
-        height: 5vh;
+        width: 11rem;
+        height: 7vh;
     }
     .btn-2nd{
-        width: 32vw;
-        height: 5vh;
+        width: 11rem;
+        height: 7vh;
     }
     nav{
         display: none;
@@ -517,20 +518,38 @@ footer ul li {
     .hero{
         grid-template-columns: 1fr;
         gap: 1rem;
+        width: 100%;
+        margin-left: 2.5rem;
     }
     .hero-1st h1{
-        font-size: 4rem;
+        font-size: 3.5rem;
     }
     .dancing-font{
-        font-size: 4rem;
+        font-size: 7rem;
     }
     .short-1{
         position: relative;
         top: 4rem;
         left: 15rem;
+        width: 38vw;
+        height: 12vh;
+        padding: 0.5rem;
+    }
+    .short-1 h1{
+        font-size: 2.3rem;
+    }
+    .short-2{
+        width: 11rem;
+        height: 5rem;
+        top: 28vh;
+    }
+    .cont{
+        font-size: 1rem;
     }
     .sec-2{
         margin-top: 5vh;
+        width: 89vh;
+
     }
     .sec2-cards{
         grid-template-columns: repeat(1,1fr);
@@ -539,38 +558,105 @@ footer ul li {
     .sec2-title p{
         margin: 1.5rem auto;
         line-height: 1.5rem;
-        width: 58vw;
+        width: 85vw;
     }
     .card p{
-        font-size: 1.5rem;
-        width: 60%;
+        font-size: 1.2rem;
+        width: 80%;
+    }
+    .sec-3{
+        margin: 10vh 5vh;
+        width: 90vw;
     }
     .sec3-left{
         width: 100%;
+        margin-left: 0;
     }
     .sec-3 img{
         width: 100%;
     }
     .sec-4-title{
-        width: 66%;
+        width: 90%;
         margin: 2rem;
+    }
+    .sec-4-title h1{
+        font-size: 3rem;
+    }
+    .sec-4{
+        width: 89vh;
+    }
+    .input input{
+        font-size: 1rem;
+        height: 6vh;
+    }
+    .input select{
+        font-size: 1rem;
+        height: 6vh;
     }
     .sec4-in{
         grid-template-columns: repeat(1,1fr);
         width: 90%;
     }
     .sec4-left table{
-        width: 90%;
+        width: 80%;
+    }
+    .sec-5-title{
+        width: 89vh;
+    }
+    .sec-5-title h1{
+        font-size: 2.5rem;
     }
     .sec-5-title p{
         font-size: 1.2rem;
         width: 70%;
     }
     .sec-5{
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
+        margin: 5vh 7vh;
+        width: 100%;
+    }
+    .trainer-1{
+        font-size: 1rem;
+    padding: 1rem;
+    height: 50vh;
+    }
+    .trainer-2{
+        font-size: 1rem;
+    padding: 1rem;
+    height: 50vh;
+    }
+    .trainer-3{
+        font-size: 1rem;
+    padding: 1rem;
+    height: 50vh;
+    }
+    .trainer-4{
+        font-size: 1rem;
+    padding: 1rem;
+    height: 50vh;
+    }
+    .trainer-5{
+        font-size: 1rem;
+    padding: 1rem;
+    height: 50vh;
+    }
+    .trainer-6{
+        font-size: 1rem;
+    padding: 1rem;
+    height: 50vh;
+    }
+    footer{
+        width: 89vh;
     }
     .foot{
         grid-template-columns: repeat(1,1fr);
+        margin-left: 3vh;
+    }
+    .left-foot p{
+        width: 94vw;
+    }
+    .bottom{
+        width: 100vw;
     }
     .bottom p{
         text-align: left;
