--- a/style.css
+++ b/style.css
@@ -514,12 +514,13 @@ footer ul li {
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     width: 90vw;
-    margin: 6rem auto 12rem auto;
+    margin: 6rem auto;
+    margin-bottom: 8rem;
 }
 .recipe{
+    width: 30rem;
     display: flex;
     flex-direction: column;
-    width: 30rem;
     background-color: #95959526;
     border-radius: 1rem;
     padding: 2rem;
@@ -532,7 +533,7 @@ footer ul li {
     font-size: 2.5rem;
     margin: 1.8vh 0;
 }
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 426px) {
     .btn{
         width: 11rem;
         height: 7vh;
@@ -689,5 +690,20 @@ footer ul li {
     }
     .bottom p{
         text-align: left;
+    }
+    .uniq-title{
+        margin: 2rem 5rem;
+    }
+    .uniq{
+        grid-template-columns: repeat(1, 1fr);
+        margin: 1rem 7vw 4rem 7vw;
+        width: 95vw;
+    }
+    .recipe{
+        width: 100%;
+    }
+    .recipe img{
+        height: 38vh;
+        margin-bottom: 1rem;
     }
 }
