--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ nav ul li:first-child{
     width: 32vw;
     border-radius: 1rem;
     Object-fit:none;
-    Object-position: 66% 33%
+    Object-position: 69% 31%;
 }
 .sec-4-title{
     width: 40vw;
